# trabalho-3-oscarkemuel

./: .gitignore  CMakeLists.txt  README.md  main
data/: maze1.txt  maze2.txt  maze3.txt
include/: SnakeGame.h  apple.h  level.h  maze.h  player.h  snake.h
src/: SnakeGame.cpp  Snaze.cpp  apple.cpp  level.cpp  maze.cpp  player.cpp  snake.cpp
