cmake_minimum_required(VERSION 3.5)
project(snake VERSION 0.1 LANGUAGES CXX )


### Execut치vel
# Diret칩rio contendo os .hpp
include_directories( include )

# Cria um execut치vel com nome "concordo", adiciona neste execut치vel os arquivos src/concordo.cpp src/sistema.cpp src/executor.cpp
add_executable( snaze
                src/snake.cpp
                src/apple.cpp
                src/maze.cpp
                src/SnakeGame.cpp
                src/Snaze.cpp )

# The end
